third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/diagnostic-not-implemented-try-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-try-from-bytes.rs:18:28
   |
18 |     takes_try_from_bytes::<NotZerocopy>();
   |                            ^^^^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::TryFromBytes`:
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
           and $N others
note: required by a bound in `takes_try_from_bytes`
  --> tests/ui-stable/diagnostic-not-implemented-try-from-bytes.rs:21:28
   |
21 | fn takes_try_from_bytes<T: TryFromBytes>() {}
   |                            ^^^^^^^^^^^^ required by this bound in `takes_try_from_bytes`
